{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 847,
  "lineage": "f42e2868-b787-b3c5-4643-1d01d5a96176",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "balancer_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-03T08:15:02.102-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2223-calculator-02/global/firewalls/balancer",
            "log_config": [],
            "name": "balancer",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
            "priority": 1000,
            "project": "agisit-2223-calculator-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/firewalls/balancer",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "balancer"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "databases_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-03T08:15:02.092-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2223-calculator-02/global/firewalls/databases",
            "log_config": [],
            "name": "databases",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
            "priority": 1000,
            "project": "agisit-2223-calculator-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/firewalls/databases",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "databases"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-03T08:15:02.109-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2223-calculator-02/global/firewalls/frontend",
            "log_config": [],
            "name": "frontend",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
            "priority": 1000,
            "project": "agisit-2223-calculator-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/firewalls/frontend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "frontend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "metrics_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-03T08:15:16.245-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2223-calculator-02/global/firewalls/metrics",
            "log_config": [],
            "name": "metrics",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
            "priority": 1000,
            "project": "agisit-2223-calculator-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/firewalls/metrics",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "balancer",
              "databases",
              "frontend",
              "operations"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "monitor_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9090",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-03T08:15:02.017-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2223-calculator-02/global/firewalls/monitor",
            "log_config": [],
            "name": "monitor",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
            "priority": 1000,
            "project": "agisit-2223-calculator-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/firewalls/monitor",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "monitor"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "operations_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-03T08:15:01.930-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/agisit-2223-calculator-02/global/firewalls/operations",
            "log_config": [],
            "name": "operations",
            "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
            "priority": 1000,
            "project": "agisit-2223-calculator-02",
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/firewalls/operations",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "operations"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "adder",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/disks/adder1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/adder1",
            "instance_id": "5897970422582765036",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "adder1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.195.134.101",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.132.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/adder1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "operations"
            ],
            "tags_fingerprint": "uw3lH1ETEmw=",
            "zone": "europe-west1-b"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/disks/adder2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/adder2",
            "instance_id": "8769143428459947032",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "adder2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.199.40.101",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.132.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/adder2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "operations"
            ],
            "tags_fingerprint": "uw3lH1ETEmw=",
            "zone": "europe-west1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/disks/balancer1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/balancer1",
            "instance_id": "4979953826289051116",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "balancer1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.189.118.159",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.154.0.26",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/balancer1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "balancer"
            ],
            "tags_fingerprint": "7RIB79AHyl4=",
            "zone": "europe-west2-b"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/disks/balancer2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/balancer2",
            "instance_id": "7547603954374173721",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "balancer2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.189.87.142",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.154.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/balancer2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "balancer"
            ],
            "tags_fingerprint": "7RIB79AHyl4=",
            "zone": "europe-west2-b"
          }
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/disks/balancer3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/balancer3",
            "instance_id": "3600685397699356141",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "balancer3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.189.71.215",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.154.0.24",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/balancer3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "balancer"
            ],
            "tags_fingerprint": "7RIB79AHyl4=",
            "zone": "europe-west2-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/disks/database1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/database1",
            "instance_id": "1483318124803417581",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "database1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.189.73.155",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.154.0.23",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/database1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "databases"
            ],
            "tags_fingerprint": "Qn8ZivejiWQ=",
            "zone": "europe-west2-b"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/disks/database2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/database2",
            "instance_id": "8862021043968959512",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "database2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.189.66.27",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.154.0.21",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/database2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "databases"
            ],
            "tags_fingerprint": "Qn8ZivejiWQ=",
            "zone": "europe-west2-b"
          }
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/disks/database3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/database3",
            "instance_id": "165111203311281645",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "database3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.131.169",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.154.0.22",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/database3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "databases"
            ],
            "tags_fingerprint": "Qn8ZivejiWQ=",
            "zone": "europe-west2-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/disks/frontend1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/frontend1",
            "instance_id": "824085355476968940",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "frontend1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.125.189",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.154.0.27",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west2-b/instances/frontend1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "frontend"
            ],
            "tags_fingerprint": "4s55Dl-6pHw=",
            "zone": "europe-west2-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/disks/monitor"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/monitor",
            "instance_id": "7519164076804432920",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "monitor",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.195.184.231",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.132.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/monitor",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "monitor"
            ],
            "tags_fingerprint": "uk5s3tllhGI=",
            "zone": "europe-west1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "multiplier",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/disks/multiplier1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/multiplier1",
            "instance_id": "6564223934429816301",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "multiplier1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.109.65",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.132.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/multiplier1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "operations"
            ],
            "tags_fingerprint": "uw3lH1ETEmw=",
            "zone": "europe-west1-b"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/disks/multiplier2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/multiplier2",
            "instance_id": "7398179237532689432",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiTPY7lC/RPx9WicC8OLWVUJ4yP+U4j/yAOVsffjHOQL6TTPVUF6O/cvxTutQyjF3KFwPX9HcMaC5Y6P0L6oZlRzO9MFX+dQLpv17JRrTiZzYhiJpB7ivBrwRTaNXzn1pgVGd0JKpuY1T5hpxn80HFx8Wg0qfJIV5hWfpusNxKJ8SPmz7ft3Wozhnclfw5uUP8OVsaqr/gRX1rFpdl71hyxK7/6iQtYtztGzRJSG4/DKocuxHrgY9dnSnUpHAD0hGjU8jN6S9hgBZa3QOe49D+K6nYxHuQu6bOli7JleFTUpKbbPdrBmgyvxZgcM9yQzwuhhd4g8qCOTXDERLk6ygnZmIZyiuz+Za05P2IGyaqoBCQYt1x6B/CstxOUA9jl6Os8JfDbYPZE0wSZ/4ayN2QFKdpRxlWt+rMlFgLFZZw7O [...]
            },
            "metadata_fingerprint": "UytPBmHohdo=",
            "name": "multiplier2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.78.79.125",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/global/networks/default",
                "network_ip": "10.132.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "agisit-2223-calculator-02"
              }
            ],
            "project": "agisit-2223-calculator-02",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/agisit-2223-calculator-02/zones/europe-west1-b/instances/multiplier2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "operations"
            ],
            "tags_fingerprint": "uw3lH1ETEmw=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}